--- a/semaforo/index.html
+++ b/semaforo/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="estilos.css">
+    
 </head>
 <body>
     <div id="semaforo">
@@ -13,6 +14,7 @@
         <div class="luz amarillo"></div>
         <div class="luz verde"></div>
     </div>
-
+    
+    <script src="app.js"></script>
 </body>
 </html>
