terminado de mesas- restorant

--- a/restorant/index.html
+++ b/restorant/index.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="#" onclick="agregarMesa()">Agregar Mesa</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Borrar Reservas</a>
+                    <a class="nav-link" href="#">XXXXXX</a>
                 </li>
             </ul>
         </div>
