--- a/misiondxt/contacto.html
+++ b/misiondxt/contacto.html
@@ -12,6 +12,6 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <a href="contacto.html" class="btn btn-primary">Contacto</a>
+    <h1>contactos</h1>
 </body>
 </html>
