--- a/misiondxt/index.html
+++ b/misiondxt/index.html
@@ -27,31 +27,39 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="#">Nosotros</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown link
+                        Eventos
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                    <div class="dropdown-menu desplegable-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="#">Resultados</a>
+                        <a class="dropdown-item" href="#">Calendario</a>
+                        <a class="dropdown-item" href="#">Inscripción</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle " href="#" id="navbarDropdownMenuLink" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Galería
+                    </a>
+                    <div class="dropdown-menu desplegable-menu bg-light" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="#">Videos</a>
+                        <a class="dropdown-item" href="#">Fotos</a>
+                       
                     </div>
                 </li>
             </ul>
         </div>
     </nav>
 
-    <!-- Section-->
-    <section id="principal" class="secciones mt-5 pt-5">
+    <!-- Section fotos principal-->
+    <section id="principal" class="secciones mt-5 ">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -182,10 +190,11 @@
                 <div class="col-sm">
                     <h4>Indice</h4>
                     <ul class="list-group list-group-flush bg-dark">
+                        <li class="list-group-item bg-dark"> <a href="">Inicio</a></li>
                         <li class="list-group-item bg-dark"> <a href="">Nosotros</a></li>
                         <li class="list-group-item bg-dark"><a href="">Resultados</a></li>
                         <li class="list-group-item bg-dark"><a href="">Calendario</a></li>
-                        <li class="list-group-item bg-dark"><a href="">Incripcion</a></li>
+                        <li class="list-group-item bg-dark"><a href="">Incripción</a></li>
                         <li class="list-group-item bg-dark"><a href="">Fotos</a></li>
                         <li class="list-group-item bg-dark"><a href="">Videos</a></li>
                     </ul>
@@ -196,10 +205,13 @@
                         <ul class="list-group list-group-flush bg-dark">
                            
                             <li class="list-group-item bg-dark">Soledad Garbini: (0351) 152 143153</li>
-                            <li class="list-group-item bg-dark">misiondxt@gmail.com</li>
-                            <li class="list-group-item bg-dark"><a href=""><i class="fab fa-facebook"></i> </a></li>
-                            <li class="list-group-item bg-dark"><a href=""></li>
-                            <li class="list-group-item bg-dark"><a href=""></li>
+                            <li class="list-group-item bg-dark">
+                                <a href="emailto:misiondxt@gmail.com">misiondxt@gmail.com</a></li>
+                            <li class="list-group-item bg-dark redes">
+                                <a href=""><i class="fab fa-facebook "></i></a>
+                                <a href=""><i class="fab fa-instagram"></i></a>
+                                <a href=""><i class="fab fa-google-plus-g"></i></a>
+                            </li>
                         </ul>
                     </div>
             </div>
