ultimo de mision dxt

--- a/misiondxt/nosotros.html
+++ b/misiondxt/nosotros.html
@@ -64,10 +64,12 @@
     </div>
 </section>
 <!--presentacion de nosotros-->
+
     <section class="nosotros p-5  ">
+            <h1 class="d-flex justify-content-center">Nosotros</h1>
             <div class="container">
                 <div class="row my-5">
-                    <div class="col-sm d-flex justify-content-center">
+                    <div class="col-sm-5 d-flex justify-content-center">
                             <h5> Somos un grupo de personas que amamos el deporte en todos sus aspectos, ya que creemos que es la forma
                                     sana de
                                     expresar la energía humana, nos gusta explorar, viajar y conocer nuevos lugares de nuestra querida
@@ -76,7 +78,7 @@
                                     y
                                     transmitidos.</h5>
                     </div>
-                    <div class="col-sm d-flex justify-content-center">
+                    <div class="col-sm-6 offset-sm-1 d-flex justify-content-center">
                           <div class="video-flotante">  <iframe width="100%"  src="https://www.youtube.com/embed/9rKEqtJEiRo" frameborder="0"
                             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen>
