--- a/misiondxt/index.html
+++ b/misiondxt/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-  
+
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -17,20 +17,23 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
             <img src="img/logo.png" height="80" alt="">
         </a>
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <br .d-none>
+            <br .d-none>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Nosotros</a>
+                    <a class="nav-link" href="nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -64,13 +67,14 @@
             <div class="row">
                 <div class="col">
                     <div class="bd-example">
-                        <div id="carouselExampleCaptions" class="carousel slide carousel-fade fs-background" data-ride="carousel">
+                        <div id="carouselExampleCaptions" class="carousel slide carousel-fade fs-background"
+                            data-ride="carousel">
                             <ol class="carousel-indicators">
                                 <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
                                 <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
                                 <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
                             </ol>
-                            <div class="carousel-inner" data-interval="4000" >
+                            <div class="carousel-inner" data-interval="4000">
                                 <div class="carousel-item active ">
                                     <img src="img/maraton2.jpg" class="d-block w-100" alt="...">
                                     <div class="carousel-caption d-none d-md-block">
@@ -78,14 +82,14 @@
                                         <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                                     </div>
                                 </div>
-                                <div class="carousel-item" data-interval="4000" >
+                                <div class="carousel-item" data-interval="4000">
                                     <img src="img/maraton1.jpg" class="d-block w-100" alt="...">
                                     <div class="carousel-caption d-none d-md-block">
                                         <h5>Second slide label</h5>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                     </div>
                                 </div>
-                                <div class="carousel-item" data-interval="4000" >
+                                <div class="carousel-item" data-interval="4000">
                                     <img src="img/maraton3.jpg" class="d-block w-100" alt="...">
                                     <div class="carousel-caption d-none d-md-block">
                                         <h5>¡ACORDONARSE!</h5>
@@ -103,38 +107,16 @@
                                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
-                        
+
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Reloj -->
-    <section class="contenedor-reloj">
-        <div class="container p-5">
-            <div class="d-flex justify-content-center mt-5">
-                <h1 class="titulo-reloj">Solo Faltan...</h1>
-            </div>
-            <div class="d-flex justify-content-center">
-                <h1 class="reloj"> 
-                    <span id="horas"></span> :
-                    <span id="minutos"></span> :
-                    <span id="segundos"></span>
-                </h1>
-            </div>
-            <div class="d-flex justify-content-center">
-                <h1 class="titulo-reloj">Para los 42K de Carlos Paz </h1>
-            </div>
-            <div class="d-flex justify-content-center mb-5">
-                <button class="btn  btn-lg boton-vamos">
-                    ¡QUIERO UNIRME!
-                </button>
-            </div>
-        </div>
-    </section>
+
     <!-- Poximos eventos-->
-    <section class="secciones" id="eventos">
+    <section class="secciones my-5 py-5" id="eventos">
         <h1 class="d-flex justify-content-center">Proximos Eventos</h1>
         <div class="container">
             <div class="row">
@@ -155,38 +137,63 @@
                 </div>
                 <div class="col-sm-12 col-md-4">
 
-                        <div class="card card-evento" style="width: 18rem;">
-                            <div class="fecha-evento violeta">
-                                <h4 class="dia">02</h4>
-                                <h6 class="mes">Agosto</h6>
-                            </div>
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                    of the card's content.</p>
-                                <a href="#" class="btn btn-warning ">Go somewhere</a>
-                            </div>
+                    <div class="card card-evento" style="width: 18rem;">
+                        <div class="fecha-evento violeta">
+                            <h4 class="dia">02</h4>
+                            <h6 class="mes">Agosto</h6>
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-warning ">Go somewhere</a>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-4">
+                </div>
+                <div class="col-sm-12 col-md-4">
 
-                            <div class="card card-evento" style="width: 18rem;">
-                                <div class="fecha-evento violeta">
-                                    <h4 class="dia">02</h4>
-                                    <h6 class="mes">Agosto</h6>
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                        of the card's content.</p>
-                                    <a href="#" class="btn btn-warning ">Go somewhere</a>
-                                </div>
-                            </div>
+                    <div class="card card-evento" style="width: 18rem;">
+                        <div class="fecha-evento violeta">
+                            <h4 class="dia">02</h4>
+                            <h6 class="mes">Agosto</h6>
                         </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-warning ">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
     </section>
+
+    <!-- Reloj -->
+    <section class="contenedor-reloj">
+        <div class="container p-5">
+            <div class="d-flex justify-content-center mt-5">
+                <h1 class="titulo-reloj">Solo Faltan...</h1>
+            </div>
+            <div class="d-flex justify-content-center">
+                <h1 class="reloj">
+                    <span id="horas"></span> :
+                    <span id="minutos"></span> :
+                    <span id="segundos"></span>
+                </h1>
+            </div>
+            <div class="d-flex justify-content-center">
+                <h1 class="titulo-reloj">Para los 42K de Carlos Paz </h1>
+            </div>
+            <div class="d-flex justify-content-center mb-5">
+                <button class="btn  btn-lg boton-vamos">
+                    ¡QUIERO UNIRME!
+                </button>
+            </div>
+        </div>
+    </section>
+
     <!-- imagenes despues de los proximos eventos-->
     <section class="bg-light p-5">
         <div class="container">
@@ -239,20 +246,12 @@
     <footer class="bg-dark py-5">
         <div class="container ">
             <div class="row">
-                <div class="col-sm">
-                    <h4>Indice</h4>
-                    <ul class="list-group list-group-flush bg-dark">
-                        <li class="list-group-item bg-dark"> <a href="">Inicio</a></li>
-                        <li class="list-group-item bg-dark"> <a href="">Nosotros</a></li>
-                        <li class="list-group-item bg-dark"><a href="">Resultados</a></li>
-                        <li class="list-group-item bg-dark"><a href="">Calendario</a></li>
-                        <li class="list-group-item bg-dark"><a href="">Incripción</a></li>
-                        <li class="list-group-item bg-dark"><a href="">Fotos</a></li>
-                        <li class="list-group-item bg-dark"><a href="">Videos</a></li>
-                    </ul>
+                <div class="col-sm-3">
+                <div class=""> 
+                     <img src="img/logo.png" alt="" >
+                </div>  
                 </div>
-
-                <div class="col-sm">
+                <div class="col-sm-4">
                     <h4> Inscripción y Acreditaciones </h4>
                     <ul class="list-group list-group-flush bg-dark">
 
@@ -266,6 +265,31 @@
                         </li>
                     </ul>
                 </div>
+                <div class="col-sm-5">
+                    <h4 class="text-center">Indice</h4>
+                    <div class="row">
+                        <div class="col-6">
+                            <ul class="list-group list-group-flush text-center">
+                                <li class="list-group-item bg-dark p-0 "></li>
+                                <li class="list-group-item bg-dark"> <a href="">Inicio</a></li>
+                                <li class="list-group-item bg-dark"> <a href="">Nosotros</a></li>
+                                <li class="list-group-item bg-dark"><a href="">Resultados</a></li>
+                                <li class="list-group-item bg-dark"><a href="">Calendario</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-6">
+                            <ul class="list-group list-group-flush text-center">
+                                <li class="list-group-item bg-dark p-0 "></li>
+                                <li class="list-group-item bg-dark"><a href="">Incripción</a></li>
+                                <li class="list-group-item bg-dark"><a href="">Fotos</a></li>
+                                <li class="list-group-item bg-dark"><a href="">Videos</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                  
+                </div>
+
+
             </div>
         </div>
     </footer>
